@@ -59,27 +59,31 @@ Running The Demo
 src/demo contains official demos showing all of the stock UI controls.
 The demos can be run as follows:
 
-  * 'java -jar casciian-full.jar' .  This will use
+**Note for Windows users:** When running on Windows, you may need to add the 
+`--enable-native-access=ALL-UNNAMED` flag to enable native terminal support.
+For example: `java --enable-native-access=ALL-UNNAMED -jar casciian-full.jar`
+
+  * `java -jar casciian-full.jar` .  This will use
     System.in/out with Xterm-like sequences.
 
-  * 'java -cp casciian-full.jar demo.Demo2 PORT' (where PORT is a
+  * `java -cp casciian-full.jar demo.Demo2 PORT` (where PORT is a
     number to run the TCP daemon on).  This will use the Xterm backend
     on a telnet server that will update with screen size changes.
 
-  * 'java -cp casciian-full.jar demo.Demo3' .  This will use
+  * `java -cp casciian-full.jar demo.Demo3` .  This will use
     System.in/out with Xterm-like sequences.  One can see in the code
     how to pass a different InputReader and OutputReader to
     TApplication, permitting a different encoding than UTF-8; in this
     case, code page 437.
 
-  * 'java -cp casciian-full.jar demo.Demo4' .  This demonstrates
+  * `java -cp casciian-full.jar demo.Demo4` .  This demonstrates
     hidden windows and a custom TDesktop.
 
-  * 'java -cp casciian-full.jar demo.Demo7' .  This demonstrates the
+  * `java -cp casciian-full.jar demo.Demo7` .  This demonstrates the
     BoxLayoutManager, achieving a similar result as the
     javax.swing.BoxLayout apidocs example.
 
-  * 'java -cp casciian-full.jar demo.Demo8 PORT' (where PORT is a
+  * `java -cp casciian-full.jar demo.Demo8 PORT` (where PORT is a
     number to run the TCP daemon on).  This will use the Xterm backend
     on a telnet server to share one screen to many terminals.
 
